--- a/www/backgroundfixed.css
+++ b/www/backgroundfixed.css
@@ -6,7 +6,7 @@ html::before {
   
     background-position: center;
 
-    background-image: url('/local/images/smarti_images/smarti_background.jpg') !important;
+    background-image: url('/local/images/smarti_images/smarti_background.png') !important;
   
     background-size: cover;
   
